--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <h1>Welcome to My Simple Page</h1>
     <p>This is an example of a simple HTML page with an iframe.</p>
     
-    <iframe src="https://www.example.com" title="Example Site"></iframe>
+    <iframe src="https://docs.google.com/document/d/1AcEeMXTckYGSZzZAhB5dVuOAeqZS6gRayqMzW7SD744/edit?tab=t.0" title="Example Site"></iframe>
     
     <p>Enjoy exploring!</p>
 </body>
