--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <h1>Welcome to My Simple Page</h1>
-    <p>This is an example of a simple HTML page with an iframe.</p>
+    <p>Hub de Controle - Git</p>
     
     <iframe src="https://docs.google.com/document/d/1AcEeMXTckYGSZzZAhB5dVuOAeqZS6gRayqMzW7SD744/edit?tab=t.0" title="Example Site"></iframe>
     
