--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple HTML Page with Iframe</title>
+    <title>Hub de Controle - Git</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -14,14 +14,69 @@
             height: 400px;
             border: 1px solid #ccc;
         }
+        h2 {
+        margin-top: 0px
+        height: 350px
+        background-image: url("{{ url_for('static', filename='imagem-titulo.png') }}")
+        margin-bottom: 0px
+        }
     </style>
+    <script>
+        function showModal() {
+            document.getElementById("myModal").style.display = "block";
+        }
+
+        function closeModal() {
+            document.getElementById("myModal").style.display = "none";
+        }
+
+        function checar_credenciais() {
+            const username = document.getElementById("username").value;
+            const password = document.getElementById("password").value;
+
+            if (username === "joaobajur2" && password === "Killsf2000") {
+                window.location.href = 'Ferramentas/Prompt.html'; // Redirect to about page
+            } else {
+                alert("Senha e/ou usuário incorretos."); // Alert for incorrect credentials
+            }
+        }
+
+        // Close the modal if the user clicks outside of it
+        window.onclick = function(event) {
+            const modal = document.getElementById("myModal");
+            if (event.target == modal) {
+                modal.style.display = "none";
+            }
+        }
+        function checar_senha(link) {
+        const senha = prompt("Senha: ")
+        if (senha === "Heartsofiron2") {
+                window.location.href = link
+            } else {
+                alert("senha incorreta")
+            }
+        }
+    </script>
 </head>
 <body>
-    <h1>Welcome to My Simple Page</h1>
+    <h1>Hub com diversas funcionalidades</h1>
+    <h2></h2>
     <p>Hub de Controle - Git</p>
-    
-    <iframe src="https://docs.google.com/document/d/1AcEeMXTckYGSZzZAhB5dVuOAeqZS6gRayqMzW7SD744/edit?tab=t.0" title="Example Site"></iframe>
-    
-    <p>Enjoy exploring!</p>
+    <div class="barra">
+        <ul>
+            <li><a href="#" onclick="checar_senha('Ferramentas/Prompt.html')">Prompt</a></li>
+        </ul>
+    </div>
+    <div id="modal" class="modal">
+        <span class="close" onclick="closeModal()">&times;</span>
+        <h2>Login</h2>
+        <label for="username">Usuário:</label>
+        <input type="text" id="username" required>
+        <br><br>
+        <label for="senha">Senha:</label>
+        <input type="text" id="password" required>
+        <br><br>
+        <button onclick="checar_credenciais('Ferramentas/Prompt.html')">Submeter</button>
+    </div>
 </body>
 </html>
