--- a/index.html
+++ b/index.html
@@ -58,15 +58,7 @@
             <li><a href="#" onclick="checar_senha('Ferramentas/Prompt.html')">Prompt</a></li>
         </ul>
     </div>
-    <div id="modal" class="modal">
-        <span class="close" onclick="closeModal()">&times;</span>
-        <h2>Login</h2>
-        <label for="username">Usuário:</label>
-        <input type="text" id="username" required>
-        <br><br>
-        <label for="senha">Senha:</label>
-        <input type="text" id="password" required>
-        <br><br>
+    <div>
         <button onclick="checar_credenciais('Ferramentas/Prompt.html')">Submeter</button>
     </div>
 </body>
