--- a/index.html
+++ b/index.html
@@ -14,36 +14,27 @@
             height: 400px;
             border: 1px solid #ccc;
         }
-        h2 {
-        margin-top: 0px
-        height: 350px
-        background-image: url("{{ url_for('static', filename='imagem-titulo.png') }}")
-        margin-bottom: 0px
+        h1 {
+            margin-top: 0px;
+            height: 350px;
+            line-height: 350px;
+            font-family: Poppins;
+            font-size: 75px;
+            text-align: right;
+            background-image: url('static/imagem-titulo.png');
+            background-size: cover;
+            background-position: center;
+            margin-bottom: 0px;
+        }
+        iframe {
+            height: 600px;
         }
     </style>
-    <script>
-
-        function checar_credenciais() {
-            const password = prompt("senha: ")
-                if (password === "Killsf2000") {
-                window.location.href = 'Ferramentas/Prompt.html'; // Redirect to about page
-            } else {
-                alert("Senha e/ou usuário incorretos."); // Alert for incorrect credentials
-            }
-        }
-    </script>
 </head>
 <body>
-    <h1>Hub com diversas funcionalidades</h1>
-    <h2></h2>
-    <p>Hub de Controle - Git</p>
+    <h1>Hub de Controle</h1>
     <div class="barra">
-        <ul>
-            <li><a href="#" onclick="checar_senha('Ferramentas/Prompt.html')">Prompt</a></li>
-        </ul>
-    </div>
-    <div>
-        <button onclick="checar_credenciais('Ferramentas/Prompt.html')">Submeter</button>
+        <iframe src="" title="Prompt"></iframe>
     </div>
 </body>
 </html>
