--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
     <h1>Hub de Controle</h1>
     <div class="barra">
-        <iframe src="" title="Prompt"></iframe>
+        <iframe src="https://docs.google.com/document/d/1nkDWSOCCZbrP2RdNypwrw4OZ0ivTUIzGM22ON9sGuMk/edit?tab=t.0" title="Prompt"></iframe>
     </div>
 </body>
 </html>
