--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
     </style>
 </head>
 <body>
+    <h1>Portfólio de Códigos</h1>
+    <p class="text-larger" markdown>:material-tools:{ .lg .middle .light-red } __Exercícios_python__</p>
+        ---
+
+    Aqui estão alguns exercícios simples em python!
+
+    [:octicons-arrow-right-24: Acesse o Repositório](https://github.com/jonh213412421/Python-Exercises)
     <h1>Hub de Controle</h1>
     <div class="barra">
         <iframe src="" title="Prompt"></iframe>
