--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             height: 400px;
             border: 5px solid #ccc;
         }
-        h1 {
+        h2 {
             margin-top: 0px;
             height: 350px;
             line-height: 350px;
@@ -34,13 +34,15 @@
 </head>
 <body>
     <h1>Portfólio de Códigos</h1>
-    <p class="text-larger" markdown>:material-tools:{ .lg .middle .light-red } __Exercícios_python__</p>
-        ---
-
-    Aqui estão alguns exercícios simples em python!
-
-    [:octicons-arrow-right-24: Acesse o Repositório](https://github.com/jonh213412421/Python-Exercises)
-    <h1>Hub de Controle</h1>
+    <div>X
+        <p class="text-larger" markdown>:material-tools:{ .lg .middle .light-red } __Exercícios_python__</p>
+            ---
+    
+        Aqui estão alguns exercícios simples em python!
+    
+        [:octicons-arrow-right-24: Acesse o Repositório](https://github.com/jonh213412421/Python-Exercises)
+    </div>
+    <h2>Hub de Controle</h2>
     <div class="barra">
         <iframe src="" title="Prompt"></iframe>
     </div>
