--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 </head>
 <body>
     <h1>Portfólio de Códigos</h1>
-    <div>X
+    <div class="grid cards card-border-radius" markdown>
         <p class="text-larger" markdown>:material-tools:{ .lg .middle .light-red } __Exercícios_python__</p>
             ---
-    
+
         Aqui estão alguns exercícios simples em python!
-    
+
         [:octicons-arrow-right-24: Acesse o Repositório](https://github.com/jonh213412421/Python-Exercises)
     </div>
     <h2>Hub de Controle</h2>
