--- a/index.html
+++ b/index.html
@@ -1,50 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+<link href="style.css" rel="stylesheet" type="text/css">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hub de Controle - Git</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
-        iframe {
-            margin-top: 30px;
-            width: 100%;
-            height: 400px;
-            border: 5px solid #ccc;
-        }
-        h1 {
-            margin-top: 0px;
-            height: 350px;
-            line-height: 350px;
-            font-family: Poppins;
-            font-size: 75px;
-            text-align: right;
-            background-image: url('static/imagem-titulo.png');
-            background-size: cover;
-            background-position: center;
-            margin-bottom: 0px;
-        }
-        iframe {
-            height: 600px;
-        }
-    </style>
+    <title>Hub - João Alberto</title>
 </head>
 <body>
-    <h1>Hub de Controle</h1>
+    <h1>Portfólio de Códigos</h1>
+    <div class="container" markdown>
+        <div class="box-container">
+            <div class="box">
+                <a href="https://github.com/jonh213412421/Python-Exercises" class="box-titulo">Python básico</a>
+                <p class="box-texto">Alguns exercícios básicos em python</p>
+            </div>
+            <div class="box">
+                <a href="https://github.com/jonh213412421/Java-Exercises" class="box-titulo">Java básico</a>
+                <p class="box-texto">Alguns exercícios básicos em java</p>
+            </div>
+        </div>
+    </div>
+    <h2>Janela Iframe</h2>
     <div class="barra">
         <iframe src="" title="Prompt"></iframe>
-    </div>
-    <h2>Portfólio de Códigos</h2>
-    <div class="grid cards card-border-radius" markdown>
-        <p class="text-larger" markdown>:material-tools:{ .lg .middle .light-red } __Exercícios_python__</p>
-            ---
-
-        Aqui estão alguns exercícios simples em python!
-
-        [:octicons-arrow-right-24: Acesse o Repositório](https://github.com/jonh213412421/Python-Exercises)
     </div>
 </body>
 </html>
