--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hub - João Alberto</title>
+    <h3>Seja Bem-vindo!</h3>
+    <h5></h5>
+    <div class="sobre">
+        Os códigos linkados nesta página são fruto de uma paixão recém-descoberta. Mesmo com um pai que
+        trabalha na área da Tecnologia da Informação, eu nunca tinha me interessado muito pelo campo. Eu
+        Achava programação algo complexo e distante. No entanto, recentemente comecei a fazer um esforço
+        para aprender Python. Foi a melhor decisão que eu tomei na vida. Desde então, tenho experimentado
+        com diversas bibliotecas para implementar as ideias loucas que eu tenho.
+        Mas implementar ideias é só metade da diversão. Aqui eu compartilho os meus códigos para que as
+        pessoas possar utilizar, dar seu feedback, e me ajudar nesta linda jornada pelo mundo da programação
+    </div>
 </head>
 <body>
     <h1>Portfólio de Códigos</h1>
@@ -18,9 +29,17 @@
                 <a href="https://github.com/jonh213412421/Java-Exercises" class="box-titulo">Java básico</a>
                 <p class="box-texto">Alguns exercícios básicos em java</p>
             </div>
+            <div class="box">
+                <a href="https://github.com/jonh213412421/ML" class="box-titulo">Machine Learning</a>
+                <p class="box-texto">Machine Learning com TensorFlow</p>
+            </div>
+            <div class="box">
+                <a href="https://github.com/jonh213412421/Flask-studies/tree/main" class="box-titulo">Flask</a>
+                <p class="box-texto">Alguns exercícios simples com o Flask Framework</p>
+            </div>
         </div>
     </div>
-    <h2>Janela Iframe</h2>
+    <h4>Janela Iframe</h4>
     <div class="barra">
         <iframe src="" title="Prompt"></iframe>
     </div>
