--- a/index.html
+++ b/index.html
@@ -5,20 +5,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hub - João Alberto</title>
-    <h3>Seja Bem-vindo!</h3>
-    <h5></h5>
-    <div class="sobre">
-        Os códigos linkados nesta página são fruto de uma paixão recém-descoberta. Mesmo com um pai que
-        trabalha na área da Tecnologia da Informação, eu nunca tinha me interessado muito pelo campo. Eu
-        Achava programação algo complexo e distante. No entanto, recentemente comecei a fazer um esforço
-        para aprender Python. Foi a melhor decisão que eu tomei na vida. Desde então, tenho experimentado
-        com diversas bibliotecas para implementar as ideias loucas que eu tenho.
-        Mas implementar ideias é só metade da diversão. Aqui eu compartilho os meus códigos para que as
-        pessoas possar utilizar, dar seu feedback, e me ajudar nesta linda jornada pelo mundo da programação
-    </div>
+
 </head>
 <body>
-    <h1>Portfólio de Códigos</h1>
+    <h1 class="titulo_portfolio">Seja Bem-vindo!</h1>
+    <h1 class="espaco"></h1>
+    <div class="container-topo" markdown>
+        <div class="box-container-topo">
+            <div class="box-topo">
+                <span class="subtitulo"><strong>Sobre mim:</strong></span><br><br>
+                Me chamo João Alberto. Os códigos linkados nesta página são fruto de uma paixão recém-descoberta. Mesmo com um pai que
+                trabalha na área da Tecnologia da Informação, eu nunca tinha me interessado muito pelo campo. Eu
+                Achava programação algo complexo e distante. No entanto, recentemente comecei a fazer um esforço
+                para aprender Python. Foi a melhor decisão que eu tomei na vida. Desde então, tenho experimentado
+                com diversas bibliotecas para implementar as ideias loucas que eu tenho.
+                Mas implementar ideias é só metade da diversão. Aqui eu compartilho os meus códigos para que as
+                pessoas possar utilizar, dar seu feedback, e me ajudar nesta linda jornada pelo mundo da programação
+            </div>
+            <div class="box-topo">
+                <span class="subtitulo"><strong>Linguagens de Programação que Estudo:</strong></span><br><br>
+                → Pacote Office<br>
+                → Python intermediário<br>
+                → C básico<br>
+                → Java básico<br>
+                → Javascript básico<br>
+                → HTML básico<br>
+                → Flask (Framework) básico<br>
+                → Microsoft Power Automate avançado<br>
+            </div>
+            <div class="box-topo">
+                <span class="subtitulo"><strong>Objetivos Profissionais:</strong></span><br><br>
+                Sou apaixonado por programação, com especialização em segurança digital e automação de processos. Tenho um grande interesse
+                em desenvolver soluções que aumentem a eficiência e a proteção de sistemas, buscando sempre otimizar tarefas e reduzir riscos.
+                Adoro enfrentar desafios técnicos e estou constantemente aprendendo novas tecnologias e técnicas para expandir meu conhecimento
+                sobre computação, visando tanto a evolução profissional quanto a inovação. O universo da tecnologia me fascina, e estou sempre
+                em busca de novas maneiras de aplicar minhas habilidades para resolver problemas complexos e criar soluções criativas e seguras.
+            </div>
+        </div>
+    </div>
+    <h1 class="espaco"></h1>
+    <h2 class="titulo_portfolio">Portfólio de Códigos</h2>
     <div class="container" markdown>
         <div class="box-container">
             <div class="box">
@@ -37,9 +63,13 @@
                 <a href="https://github.com/jonh213412421/Flask-studies/tree/main" class="box-titulo">Flask</a>
                 <p class="box-texto">Alguns exercícios simples com o Flask Framework</p>
             </div>
+            <div class="box">
+                <a href="https://github.com/jonh213412421/CryptP" class="box-titulo">Criptografia</a>
+                <p class="box-texto">Programa simples para criptografar arquivos com Python</p>
+            </div>
         </div>
     </div>
-    <h4>Janela Iframe</h4>
+    <h3 class="janela_iframe">Janela Iframe</h3>
     <div class="barra">
         <iframe src="" title="Prompt"></iframe>
     </div>
