--- a/index.html
+++ b/index.html
@@ -14,13 +14,10 @@
         <div class="box-container-topo">
             <div class="box-topo">
                 <span class="subtitulo"><strong>Sobre mim:</strong></span><br><br>
-                Me chamo João Alberto. Os códigos linkados nesta página são fruto de uma paixão recém-descoberta. Mesmo com um pai que
-                trabalha na área da Tecnologia da Informação, eu nunca tinha me interessado muito pelo campo. Eu
-                Achava programação algo complexo e distante. No entanto, recentemente comecei a fazer um esforço
-                para aprender Python. Foi a melhor decisão que eu tomei na vida. Desde então, tenho experimentado
-                com diversas bibliotecas para implementar as ideias loucas que eu tenho.
-                Mas implementar ideias é só metade da diversão. Aqui eu compartilho os meus códigos para que as
-                pessoas possar utilizar, dar seu feedback, e me ajudar nesta linda jornada pelo mundo da programação
+                    Os códigos disponíveis nesta página são resultado de uma jornada contínua de aprendizado e experimentação. Tenho explorado 
+                    diversas bibliotecas e tecnologias para implementar funcionalidades inovadoras e me aprofundar em áreas que despertam meu interesse. 
+                    Compartilho meus projetos com a intenção de que outras pessoas possam utilizá-los, fornecer feedback construtivo e, assim, contribuir 
+                    para o meu crescimento na incrível jornada pelo mundo da programação.
             </div>
             <div class="box-topo">
                 <span class="subtitulo"><strong>Linguagens de Programação que Estudo:</strong></span><br><br>
@@ -35,11 +32,9 @@
             </div>
             <div class="box-topo">
                 <span class="subtitulo"><strong>Objetivos Profissionais:</strong></span><br><br>
-                Sou apaixonado por programação, com especialização em segurança digital e automação de processos. Tenho um grande interesse
-                em desenvolver soluções que aumentem a eficiência e a proteção de sistemas, buscando sempre otimizar tarefas e reduzir riscos.
-                Adoro enfrentar desafios técnicos e estou constantemente aprendendo novas tecnologias e técnicas para expandir meu conhecimento
-                sobre computação, visando tanto a evolução profissional quanto a inovação. O universo da tecnologia me fascina, e estou sempre
-                em busca de novas maneiras de aplicar minhas habilidades para resolver problemas complexos e criar soluções criativas e seguras.
+                    Possuo interesse em segurança digital e automação de processos. Busco desenvolver soluções inovadoras que aumentem a eficiência e a proteção de sistemas,
+                    com ênfase na otimização de tarefas e redução de riscos. Estou sempre em busca de novos desafios técnicos e de expandir meu conhecimento em novas tecnologias, 
+                    visando tanto o crescimento profissional quanto a aplicação criativa e segura de minhas habilidades.
             </div>
         </div>
     </div>
