--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 → Microsoft Power Automate avançado<br>
             </div>
             <div class="box-topo">
-                <span class="subtitulo"><strong>Objetivos Profissionais:</strong></span><br><br>
+                <span class="subtitulo"><strong>Interesses:</strong></span><br><br>
                     Possuo interesse em segurança digital e automação de processos. Busco desenvolver soluções inovadoras que aumentem a eficiência e a proteção de sistemas,
                     com ênfase na otimização de tarefas e redução de riscos. Estou sempre em busca de novos desafios técnicos e de expandir meu conhecimento em novas tecnologias, 
                     visando tanto o crescimento profissional quanto a aplicação criativa e segura de minhas habilidades.
