--- a/index.html
+++ b/index.html
@@ -1,26 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<link href="style.css" rel="stylesheet" type="text/css">
+<link href="style2.css" rel="stylesheet" type="text/css">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hub - João Alberto</title>
-
 </head>
 <body>
-    <h1 class="titulo_portfolio">Seja Bem-vindo!</h1>
-    <h1 class="espaco"></h1>
-    <div class="container-topo" markdown>
-        <div class="box-container-topo">
-            <div class="box-topo">
-                <span class="subtitulo"><strong>Sobre mim:</strong></span><br><br>
-                    Os códigos disponíveis nesta página são resultado de uma jornada contínua de aprendizado e experimentação. Tenho explorado 
-                    diversas bibliotecas e tecnologias para implementar funcionalidades inovadoras e me aprofundar em áreas que despertam meu interesse. 
-                    Compartilho meus projetos com a intenção de que outras pessoas possam utilizá-los, fornecer feedback construtivo e, assim, contribuir 
-                    para o meu crescimento na incrível jornada pelo mundo da programação.
+    <div class="container">
+            <div class="caixa">
+                <img src="assets/foto.jpg" id="foto-profile">
             </div>
-            <div class="box-topo">
-                <span class="subtitulo"><strong>Linguagens de Programação que Estudo:</strong></span><br><br>
+            <div class="caixa">
+                <h1 class="titulo" id="olamundo">Olá, Mundo!</h1>
+                <p id="texto-topo">
+                    Os códigos disponíveis nesta página são resultado de uma jornada contínua de aprendizado e experimentação. Tenho explorado diversas bibliotecas e tecnologias para implementar funcionalidades inovadoras e me aprofundar em áreas que despertam meu interesse. Compartilho meus projetos com a intenção de que outras pessoas possam utilizá-los, fornecer feedback construtivo e contribuir para o meu crescimento na incrível jornada pelo mundo da programação.
+                </p>
+            </div>
+    </div>
+    <div class="container">
+            <div class="caixa">
+                <img src="linguagens.jpg" id="foto-linguagens">
+            </div>
+            <div class="caixa">
+                <h1 class="titulo" id="linguagens">Linguagens de Interesse:</h1>
+                <p id="itens">
                 → Pacote Office<br>
                 → Python intermediário<br>
                 → C básico<br>
@@ -29,45 +33,38 @@
                 → HTML básico<br>
                 → Flask (Framework) básico<br>
                 → Microsoft Power Automate avançado<br>
+                </p>
             </div>
-            <div class="box-topo">
-                <span class="subtitulo"><strong>Interesses:</strong></span><br><br>
-                    Possuo interesse em segurança digital e automação de processos. Busco desenvolver soluções inovadoras que aumentem a eficiência e a proteção de sistemas,
-                    com ênfase na otimização de tarefas e redução de riscos. Estou sempre em busca de novos desafios técnicos e de expandir meu conhecimento em novas tecnologias, 
-                    visando tanto o crescimento profissional quanto a aplicação criativa e segura de minhas habilidades.
-            </div>
-        </div>
     </div>
-    <h1 class="espaco"></h1>
-    <h2 class="titulo_portfolio">Portfólio de Códigos</h2>
-    <h1 class="espaco"></h1>
-    <div class="container" markdown>
-        <div class="box-container">
-            <div class="box">
-                <a href="https://github.com/jonh213412421/Python-Exercises" class="box-titulo">Python básico</a>
-                <p class="box-texto">Alguns exercícios básicos em python</p>
+    <h1 id="repositorios">Repositórios:</h1>
+    <div class="container2" id="container-baixo-python">
+            <div class="caixa">
+                <h1 id="python-texto2">Python</h1>
+                <img src="python.jpg" id="foto-python">
             </div>
-            <div class="box">
-                <a href="https://github.com/jonh213412421/Java-Exercises" class="box-titulo">Java básico</a>
-                <p class="box-texto">Alguns exercícios básicos em java</p>
+            <div class="caixa">
+                <a href="https://github.com/jonh213412421/Python-Exercises"><img src="python.jpg" class="item-baixo"></a>
+                <p class="python-texto3">Exercícios básicos</p>
+                <a href="https://github.com/jonh213412421/CryptP"><img src="cript.jpg" class="item-baixo"></a>
+                <p class="python-texto3">Criptografia de arquivos</p>
             </div>
-            <div class="box">
-                <a href="https://github.com/jonh213412421/ML" class="box-titulo">Machine Learning</a>
-                <p class="box-texto">Machine Learning com TensorFlow</p>
+            <div class="caixa">
+                <a href="https://github.com/jonh213412421/Flask-studies/tree/main"><img src="flask.jpg" class="item-baixo"></a>
+                <p class="python-texto3">Exercícios básicos com Flask</p>
+                <a href="https://github.com/jonh213412421/ML"><img src="tensorflow.jpeg" class="item-baixo"></a>
+                <p class="python-texto3">Machine Learning (TensorFlow)</p>
             </div>
-            <div class="box">
-                <a href="https://github.com/jonh213412421/Flask-studies/tree/main" class="box-titulo">Flask</a>
-                <p class="box-texto">Alguns exercícios simples com o Flask Framework</p>
-            </div>
-            <div class="box">
-                <a href="https://github.com/jonh213412421/CryptP" class="box-titulo">Criptografia</a>
-                <p class="box-texto">Programa simples para criptografar arquivos com Python</p>
-            </div>
-        </div>
     </div>
-    <h3 class="janela_iframe">Janela Iframe</h3>
-    <div class="barra">
-        <iframe src="" title="Prompt"></iframe>
+    <div class="container2" id="container-baixo-java">
+            <div class="caixa">
+                <h1 id="java-texto">Java</h1>
+                <img src="java.jpg" id="foto-java">
+            </div>
+            <div class="caixa">
+                <a href="https://github.com/jonh213412421/Java-Exercises"><img src="java.jpg" class="item-baixo"></a>
+                <p class="python-texto3">Alguns exercícios básicos em java</p>
+            </div>
+
     </div>
 </body>
 </html>
