--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="caixa">
                 <h1 class="titulo" id="olamundo">Olá, Mundo!</h1>
                 <p id="texto-topo">
-                    Os códigos disponíveis nesta página são resultado de uma jornada contínua de aprendizado e experimentação. Tenho explorado diversas bibliotecas e tecnologias para implementar funcionalidades inovadoras e me aprofundar em áreas que despertam meu interesse. Compartilho meus projetos com a intenção de que outras pessoas possam utilizá-los, fornecer feedback construtivo e contribuir para o meu crescimento na incrível jornada pelo mundo da programação.
+                    Os projetos apresentados nesta página são fruto de uma jornada constante de aprendizado e experimentação. Ao longo dessa trajetória, venho explorando diferentes bibliotecas e tecnologias, com o objetivo de criar soluções inovadoras e aprofundar meus conhecimentos em áreas que me fascinam. Compartilho essas criações com a intenção de que outros possam utilizá-las, fornecer feedback construtivo e, assim, contribuir para o meu crescimento contínuo na emocionante e desafiadora jornada pela programação.
                 </p>
             </div>
     </div>
