--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 <body>
     <div class="container">
             <div class="caixa">
-                <img src="assets/foto.jpg" id="foto-profile">
+                <img src="foto.jpg" id="foto-profile">
             </div>
-            <div class="caixa">
+            <div class="caixa" id="test">
                 <h1 class="titulo" id="olamundo">Olá, Mundo!</h1>
                 <p id="texto-topo">
-                    Os projetos apresentados nesta página são fruto de uma jornada constante de aprendizado e experimentação. Ao longo dessa trajetória, venho explorando diferentes bibliotecas e tecnologias, com o objetivo de criar soluções inovadoras e aprofundar meus conhecimentos em áreas que me fascinam. Compartilho essas criações com a intenção de que outros possam utilizá-las, fornecer feedback construtivo e, assim, contribuir para o meu crescimento contínuo na emocionante e desafiadora jornada pela programação.
+                   Os projetos apresentados nesta página são fruto de uma jornada constante de aprendizado e experimentação. Ao longo dessa trajetória, venho explorando diferentes bibliotecas e tecnologias, com o objetivo de criar soluções inovadoras e aprofundar meus conhecimentos em áreas que me fascinam. Compartilho essas criações com a intenção de que outros possam utilizá-las, fornecer feedback construtivo e, assim, contribuir para o meu crescimento contínuo na emocionante e desafiadora jornada pela programação.
                 </p>
             </div>
     </div>
     <div class="container">
             <div class="caixa">
-                <img src="assets/linguagens.jpg" id="foto-linguagens">
+                <img src="linguagens.jpg" id="foto-linguagens">
             </div>
             <div class="caixa">
                 <h1 class="titulo" id="linguagens">Linguagens de Interesse:</h1>
@@ -40,31 +40,35 @@
     <div class="container2" id="container-baixo-python">
             <div class="caixa">
                 <h1 id="python-texto2">Python</h1>
-                <img src="assets/python.jpg" id="foto-python">
+                <img src="python.jpg" id="foto-python">
             </div>
             <div class="caixa">
-                <a href="https://github.com/jonh213412421/Python-Exercises"><img src="assets/python.jpg" class="item-baixo"></a>
+                <a href="https://github.com/jonh213412421/Python-Exercises"><img src="python.jpg" class="item-baixo"></a>
                 <p class="python-texto3">Exercícios básicos</p>
-                <a href="https://github.com/jonh213412421/CryptP"><img src="assets/cript.jpg" class="item-baixo"></a>
+                <a href="https://github.com/jonh213412421/CryptP"><img src="cript.jpg" class="item-baixo"></a>
                 <p class="python-texto3">Criptografia de arquivos</p>
             </div>
             <div class="caixa">
-                <a href="https://github.com/jonh213412421/Flask-studies/tree/main"><img src="assets/flask.jpg" class="item-baixo"></a>
+                <a href="https://github.com/jonh213412421/Flask-studies/tree/main"><img src="flask.jpg" class="item-baixo"></a>
                 <p class="python-texto3">Exercícios básicos com Flask</p>
-                <a href="https://github.com/jonh213412421/ML"><img src="assets/tensorflow.jpeg" class="item-baixo"></a>
+                <a href="https://github.com/jonh213412421/ML"><img src="tensorflow.jpeg" class="item-baixo"></a>
                 <p class="python-texto3">Machine Learning (TensorFlow)</p>
             </div>
     </div>
     <div class="container2" id="container-baixo-java">
             <div class="caixa">
                 <h1 id="java-texto">Java</h1>
-                <img src="assets/java.jpg" id="foto-java">
+                <img src="java.jpg" id="foto-java">
             </div>
             <div class="caixa">
-                <a href="https://github.com/jonh213412421/Java-Exercises"><img src="assets/java.jpg" class="item-baixo"></a>
+                <a href="https://github.com/jonh213412421/Java-Exercises"><img src="java.jpg" class="item-baixo"></a>
                 <p class="python-texto3">Alguns exercícios básicos em java</p>
             </div>
-
+    </div>
+    <div class="container3">
+        <p id="creditos">
+            Criado por João Alberto, 2024.
+        </p>
     </div>
 </body>
 </html>
