--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="container2" id="container-baixo-python">
             <div class="caixa">
                 <h1 id="python-texto2">Python</h1>
-                <img src="assets/python.jpg" id="assets/foto-python">
+                <img src="assets/python.jpg" id="foto-python">
             </div>
             <div class="caixa">
                 <a href="https://github.com/jonh213412421/Python-Exercises"><img src="assets/python.jpg" class="item-baixo"></a>
