--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </div>
     <div class="container3">
         <p id="creditos">
-            Criado por João Alberto, 2024.
+            Criado por João Bajur, 2024.
         </p>
     </div>
 </body>
