--- a/index.html
+++ b/index.html
@@ -70,6 +70,6 @@
             Criado por João Bajur, 2024.
         </p>
     </div>
-    <a href="https://github.com/jonh213412421/WebPage/reserved.html"><img src="assets/java.jpg" class="item-baixo"></a>
+    <a href="reserved.html"><img src="assets/java.jpg" class="item-baixo"></a>
 </body>
 </html>
