--- a/reserved.html
+++ b/reserved.html
@@ -3,15 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página com Iframe</title>
+    <title>Página com Senha</title>
+    <script>
+        // Função para validar a senha
+        function verificarSenha() {
+            var senha = document.getElementById('senha').value; // Obtém o valor digitado
+            var senhaCorreta = '123321'; // Defina a senha desejada
+
+            if (senha === senhaCorreta) {
+                // Se a senha estiver correta, mostra a página
+                document.getElementById('pagina-secreta').style.display = 'block';
+                document.getElementById('senha-form').style.display = 'none';
+            } else {
+                // Senha incorreta
+                alert('Senha incorreta!');
+            }
+        }
+    </script>
 </head>
 <body>
-    <h1>Bem-vindo à minha página com um Iframe!</h1>
-    <p>Abaixo está um iframe com o conteúdo de outra página:</p>
+    <h1>Bem-vindo à página protegida</h1>
 
-    <!-- Iframe com uma URL externa -->
-    <iframe src="https://4abf-2804-d45-bf23-c700-dd9f-f02-668d-1c76.ngrok-free.app/url-page?target_url=https://www.google.com" width="800" height="600" title="Página Externa">
-        Seu navegador não suporta iframes.
-    </iframe>
+    <div id="senha-form">
+        <label for="senha">Digite a senha:</label>
+        <input type="password" id="senha">
+        <button onclick="verificarSenha()">Entrar</button>
+    </div>
+
+    <div id="pagina-secreta" style="display:none;">
+        <h2>Conteúdo protegido</h2>
+        <p>Você acessou uma página secreta!</p>
+    </div>
 </body>
 </html>
