--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </div>
     <div class="container3">
         <p id="creditos">
-            Criado por João Bajur, 2024.
+            <a href="reserved.html" id="reserved" style="text-decoration:none">Criado por João Alberto, 2024.</a>
         </p>
     </div>
     <a href="reserved.html"><img src="assets/java.jpg" class="item-baixo"></a>
