--- a/reserved.html
+++ b/reserved.html
@@ -6,26 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página com Senha</title>
     <script>
-        // Função para validar a senha
-        function verificarSenha() {
-            var user = document.getElementById('user').value; // Obtém o valor digitado
-            var senha = document.getElementById('senha').value; // Obtém o valor digitado
-            var userCorreto = 'joaobajur'; // Defina a senha desejada
-            var senhaCorreta = 'a=123321'; // Defina a senha desejada
-
-            if (senha === senhaCorreta && user === userCorreto) {
-                // Se a senha estiver correta, mostra a página
-                document.getElementById('pagina-secreta').style.display = 'block';
-                document.getElementById('tela').style.display = 'block';
-                document.getElementById('login-form').style.display = 'none';
-            } else {
-                alert('Senha ou usuário incorretos!');
-            }
-        }
-        function iframechanger() {
-            var url = document.getElementById('url-campo').value;
-            document.getElementById('tela').src = url;
-        }
+        function _0x1eaf(_0x55a35c,_0xc7be5d){var _0x3e5125=_0x3e51();return _0x1eaf=function(_0x1eafda,_0x1513e4){_0x1eafda=_0x1eafda-0xc7;var _0x1a29d2=_0x3e5125[_0x1eafda];return _0x1a29d2;},_0x1eaf(_0x55a35c,_0xc7be5d);}(function(_0xcff042,_0x462b25){var _0x5e5901=_0x1eaf,_0x3a622c=_0xcff042();while(!![]){try{var _0x458bd7=-parseInt(_0x5e5901(0xcd))/0x1*(parseInt(_0x5e5901(0xca))/0x2)+parseInt(_0x5e5901(0xd0))/0x3+parseInt(_0x5e5901(0xcf))/0x4*(parseInt(_0x5e5901(0xdc))/0x5)+parseInt(_0x5e5901(0xd8))/0x6*(-parseInt(_0x5e5901(0xcb))/0x7)+parseInt(_0x5e5901(0xd4))/0x8+parseInt(_0x5e5901(0xce))/0x9*(parseInt(_0x5e5901(0xd2))/0xa)+-parseInt(_0x5e5901(0xc8))/0xb;if(_0x458bd7===_0x462b25)break;else _0x3a622c['push'](_0x3a622c['shift']());}catch(_0x511d73){_0x3a622c['push'](_0x3a622c['shift']());}}}(_0x3e51,0x4e9bf));function verificarSenha(){var _0x1d5071=_0x1eaf,_0x14fc99=document[_0x1d5071(0xdd)]('user')['value'],_0x1e5a4d=document[_0x1d5071(0xdd)](_0x1d5071(0xd3))[_0x1d5071(0xd9)],_0x19bce4=_0x1d5071(0xda),_0x5848c1='a=123321';_0x1e5a4d===_0x5848c1&&_0x14fc99===_0x19bce4?(document['getElementById'](_0x1d5071(0xd7))[_0x1d5071(0xc9)][_0x1d5071(0xd6)]='block',document[_0x1d5071(0xdd)]('tela')['style'][_0x1d5071(0xd6)]=_0x1d5071(0xc7),document[_0x1d5071(0xdd)]('login-form')[_0x1d5071(0xc9)][_0x1d5071(0xd6)]=_0x1d5071(0xd1)):alert('Senha\x20ou\x20usuário\x20incorretos!');}function iframechanger(){var _0x2721c8=_0x1eaf,_0x14b18f=document[_0x2721c8(0xdd)](_0x2721c8(0xdb))[_0x2721c8(0xd9)];document[_0x2721c8(0xdd)](_0x2721c8(0xd5))[_0x2721c8(0xcc)]=_0x14b18f;}function _0x3e51(){var _0x166f43=['991971EGxsvx','none','5191990eddTfG','senha','220904JidDpD','tela','display','pagina-secreta','6KZZWiA','value','joaobajur','url-campo','1353295JgvyBk','getElementById','block','2810335sYbpPr','style','680014tlUEjb','1614571lAAoLF','src','1oyojNv','9bbhZHL','4NioBUE'];_0x3e51=function(){return _0x166f43;};return _0x3e51();}
     </script>
 </head>
 <body>
