--- a/reserved.html
+++ b/reserved.html
@@ -30,6 +30,7 @@
     </div>
     <div id="div-iframe">
         <iframe src="" id="tela" style="display:none"></iframe>
+        <textarea id="notepad" style="display:none" placeholder="bloco de notas"></textarea>
     </div>
 </body>
 </html>
