--- a/reserved.html
+++ b/reserved.html
@@ -23,7 +23,7 @@
         </div>
     </fieldset>
     <div id="pagina-secreta" style="display:none;">
-        <h2>Acesso Remoto</h2>
+        <h2 id="acesso remoto">Acesso Remoto</h2>
         <label for="url" id="campo-url">Digite a URL:</label>
         <input type="url" id="url-campo" class="campo-preenchimento">
         <button onclick="iframechanger()" class="botao">Ir</button>
