--- a/reserved.html
+++ b/reserved.html
@@ -12,7 +12,7 @@
 <body>
     <fieldset id="login-form">
         <div>
-            <h1>Área Reservada</h1>
+            <h1>Área Restrita</h1>
             <label for="usuario" id="input-user">Digite o usuário:</label>
             <input type="usuario" id="user" class="campo-preenchimento"><br><br>
             <label for="password" id="input">Digite a senha:</label>
