--- a/reserved.html
+++ b/reserved.html
@@ -13,9 +13,9 @@
     <fieldset id="login-form">
         <div>
             <h1>Área Restrita</h1>
-            <label for="usuario" id="input-user">Digite o usuário:</label>
+            <label for="usuario" id="input-user">Usuário:</label>
             <input type="usuario" id="user" class="campo-preenchimento"><br><br>
-            <label for="password" id="input">Digite a senha:</label>
+            <label for="password" id="input">Senha:</label>
             <input type="password" id="senha" class="campo-preenchimento"><br><br>
             <div id="botao-div">
                 <button onclick="verificarSenha()" class="botao">Entrar</button>
