--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
             <div class="caixa">
-                <img src="assets/foto.jpg" id="foto-profile">
+                <img src="foto.jpg" id="foto-profile">
             </div>
             <div class="caixa" id="test">
                 <h1 class="titulo" id="olamundo">Olá, Mundo!</h1>
@@ -20,19 +20,17 @@
     </div>
     <div class="container">
             <div class="caixa">
-                <img src="assets/linguagens.jpg" id="foto-linguagens">
+                <img src="linguagens.jpg" id="foto-linguagens">
             </div>
             <div class="caixa">
-                <h1 class="titulo" id="linguagens">Linguagens de Interesse:</h1>
+                <h1 class="titulo" id="linguagens">Linguagens</h1>
                 <p id="itens">
-                → Pacote Office<br>
                 → Python intermediário<br>
                 → C básico<br>
                 → Java básico<br>
                 → Javascript básico<br>
                 → HTML básico<br>
                 → Flask (Framework) básico<br>
-                → Microsoft Power Automate avançado<br>
                 </p>
             </div>
     </div>
@@ -40,28 +38,38 @@
     <div class="container2" id="container-baixo-python">
             <div class="caixa">
                 <h1 id="python-texto2">Python</h1>
-                <img src="assets/python.jpg" id="foto-python">
+                <img src="python.jpg" id="foto-python">
             </div>
             <div class="caixa">
-                <a href="https://github.com/jonh213412421/Python-Exercises"><img src="assets/python.jpg" class="item-baixo"></a>
+                <a href="https://github.com/jonh213412421/Python-Exercises"><img src="python.jpg" class="item-baixo"></a>
                 <p class="python-texto3">Exercícios básicos</p>
-                <a href="https://github.com/jonh213412421/CryptP"><img src="assets/cript.jpg" class="item-baixo"></a>
+                <a href="https://github.com/jonh213412421/CryptP"><img src="cript.jpg" class="item-baixo"></a>
                 <p class="python-texto3">Criptografia de arquivos</p>
             </div>
             <div class="caixa">
-                <a href="https://github.com/jonh213412421/Flask-studies/tree/main"><img src="assets/flask.jpg" class="item-baixo"></a>
+                <a href="https://github.com/jonh213412421/Flask-studies/tree/main"><img src="flask.jpg" class="item-baixo"></a>
                 <p class="python-texto3">Exercícios básicos com Flask</p>
-                <a href="https://github.com/jonh213412421/ML"><img src="assets/tensorflow.jpeg" class="item-baixo"></a>
+                <a href="https://github.com/jonh213412421/ML"><img src="tensorflow.jpeg" class="item-baixo"></a>
                 <p class="python-texto3">Machine Learning (TensorFlow)</p>
+            </div>
+    </div>
+        <div class="container2" id="container-baixo-C">
+            <div class="caixa">
+                <h1 id="C-texto">C++</h1>
+                <img src="cpp.png" id="foto-Cpp">
+            </div>
+            <div class="caixa">
+                <a href="https://github.com/jonh213412421/Cpp"><img src="cpp.png" class="item-baixo"></a>
+                <p class="python-texto3">Exercícios básicos</p>
             </div>
     </div>
     <div class="container2" id="container-baixo-java">
             <div class="caixa">
                 <h1 id="java-texto">Java</h1>
-                <img src="assets/java.jpg" id="foto-java">
+                <img src="java.jpg" id="foto-java">
             </div>
             <div class="caixa">
-                <a href="https://github.com/jonh213412421/Java-Exercises"><img src="assets/java.jpg" class="item-baixo"></a>
+                <a href="https://github.com/jonh213412421/Java-Exercises"><img src="java.jpg" class="item-baixo"></a>
                 <p class="python-texto3">Alguns exercícios básicos em java</p>
             </div>
     </div>
