--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </div>
             <div class="caixa">
                 <a href="https://github.com/jonh213412421/Java-Exercises"><img src="assets/java.jpg" class="item-baixo"></a>
-                <p class="python-texto3">Alguns exercícios básicos em java</p>
+                <p class="python-texto3">Exercícios básicos</p>
             </div>
     </div>
     <div class="container3">
