--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </div>
     <div class="container3">
         <p id="creditos">
-            <a href="reserved2.html" id="reserved" style="text-decoration:none">Criado por João Alberto, 2024.</a>
+            <a href="reserved.html" id="reserved" style="text-decoration:none">Criado por João Alberto, 2024.</a>
         </p>
     </div>
 </body>
